# aoc-2024

./: Cargo.toml  README.md  pyproject.toml  runrs.bat
aoc-py/: __init__.py
aoc-py/solutions/: __init__.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/: util.rs
