[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Tom-the-Bomb"]
description = "Rust solutions for the 2024 Advent of Code"
repository = "https://github.com/Tom-the-Bomb/aoc-2024"
keywords = ["adventofcode", "aoc"]
categories = ["Algorithms", "Command line utilities"]

[profile.release]
overflow-checks = true
lto = "fat"

[dependencies]
regex = "1.11"
lazy_static = "1.5"

[[bin]]
name = "day1"
path = "src/bin/day1.rs"

[[bin]]
name = "day2"
path = "src/bin/day2.rs"

[[bin]]
name = "day3"
path = "src/bin/day3.rs"

[[bin]]
name = "day4"
path = "src/bin/day4.rs"